--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ height: 400px;                /* Parallax effect */
 
 /*Your Code Here*/
 /*Set background-image to header.jpg */
+background-image: url("images/header.jpg");
 
 
 
@@ -153,6 +154,7 @@ background-color: rgba(255, 255, 255, .8);
 border: 10px solid black;
 padding: 30px;
 /*Your code here:*/
+align-self: center;
 
 }
 
@@ -161,18 +163,23 @@ padding: 30px;
 nav{
   padding: 30px 0px;
   /*Your code here:*/
+  text-align: right;
 }
 
 .container{
   /*Your code here:*/
+  grid-template-columns: 50px auto 500px auto 50px ;
+  grid-template-rows: 400px 400px 400px 400px 400px ;
 }
 
 .about, .clients, .method-image, .contact-image{
   /*Your code here:*/
+  grid-column: 3 / span 2;
 }
 
 .about-image, .clients-image, .method, .contact{
   /*Your code here:*/
+  grid-column: 2 / span 2;
 }
 }
 
