--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ height: 400px;                /* Parallax effect */
 
 /*Your Code Here*/
 /*Set background-image to header.jpg */
-background-image: url("images/header.jpg");
+background-image: url("../images/header.jpg");
 
 
 
@@ -159,25 +159,27 @@ align-self: center;
 }
 
 
+
+
 @media all and (min-width: 800px){
-nav{
+nav {
   padding: 30px 0px;
   /*Your code here:*/
   text-align: right;
 }
 
-.container{
+.container {
   /*Your code here:*/
   grid-template-columns: 50px auto 500px auto 50px ;
   grid-template-rows: 400px 400px 400px 400px 400px ;
 }
 
-.about, .clients, .method-image, .contact-image{
+.about, .clients, .method-image, .contact-image {
   /*Your code here:*/
   grid-column: 3 / span 2;
 }
 
-.about-image, .clients-image, .method, .contact{
+.about-image, .clients-image, .method, .contact {
   /*Your code here:*/
   grid-column: 2 / span 2;
 }
@@ -189,17 +191,17 @@ and movement for people who have modified their
 preferences to reduce motion.*/
 
 @media screen and (prefers-reduced-motion: reduce){
-html{
+html {
     scroll-behavior: auto; /* Removes scroll animation */
 }
 
-.skip a{
+.skip a {
   -webkit-transition: none; /* sets to default setting */
   transition: none;        /* sets to default setting */
  }
 
 /*Turn off parallax*/
-header{
+header {
   background-attachment: initial;
 }
 }
